fix: icon align, inner-scroll

--- a/app/styles/pageItemContainer.less
+++ b/app/styles/pageItemContainer.less
@@ -45,69 +45,76 @@
 .pnd-panel-tab-content  {
 
 
-// Give the tabs something to sit on
-.nav-tabs {
-      margin-bottom: 5px;
-      margin-right: 0px;
-      background-color: #fff;
-      border-top: 1px solid @gray-light;
-      border-bottom: 1px solid @gray-light;
+	// Give the tabs something to sit on
+	.nav-tabs {
+	      margin-bottom: 5px;
+	      margin-right: 0px;
+	      background-color: #fff;
+	      border-top: 1px solid @gray-light;
+	      border-bottom: 1px solid @gray-light;
+		      
+	
+	  > li {
+	
+	
+	    // Actual tabs (as links)
+	    > a {
+		  color: @nav-tabs-active-link-hover-color;
+	      margin-right: 0px;
+	      line-height: @line-height-base;
+	      border: 0px;
+	      border-bottom: 1px solid @gray-light;
+	      border-top: 2px solid transparent;
+	      background-color: #fff;
+	
 	      
-
-  > li {
-
-
-    // Actual tabs (as links)
-    > a {
-	  color: @nav-tabs-active-link-hover-color;
-      margin-right: 0px;
-      line-height: @line-height-base;
-      border: 0px;
-      border-bottom: 1px solid @gray-light;
-      border-top: 2px solid transparent;
-      background-color: #fff;
-
-      
-      &:hover {
-        background-color: transparent;
-        border-bottom: 1px solid @gray-light;
-        color: #000;
-        cursor: pointer;
-      }
-      
-    }
-
-    // Active state, and its :hover to override normal :hover
-    &.active > a {
-      &,
-      &:hover,
-      &:focus {
-        border-bottom-color: transparent;
-        border-top: 2px solid @gray;
-        cursor: pointer;
-      }
-    }
-
-        
-    
-  }
-
+	      &:hover {
+	        background-color: transparent;
+	        border-bottom: 1px solid @gray-light;
+	        color: #000;
+	        cursor: pointer;
+	      }
+	      
+	    }
+	
+	    // Active state, and its :hover to override normal :hover
+	    &.active > a {
+	      &,
+	      &:hover,
+	      &:focus {
+	        border-bottom-color: transparent;
+	        border-top: 2px solid @gray;
+	        cursor: pointer;
+	      }
+	    }
+	
+	        
+	    
+	  }
+	
+	}
+	
+	// Footer
+	
+	.pnd-panel-tab-content-footer{
+		display: block;
+		border-top: 1px solid @gray-light;
+		background-color: #fff;
+		height: 30px;
+		padding: 5px;
+		position: absolute;
+		bottom: 0;
+		right: 10px;
+		left: 0;
+	}	
+	
 }
-}
 
-//
-// Footer
-// --------------------------------------------------
+	// Footer Right
 
+.pnd-dashboard-panel-last {
 
-.pnd-panel-tab-content .pnd-panel-tab-content-footer{
-	display: block;
-	border-top: 1px solid @gray-light;
-	background-color: #fff;
-	height: 30px;
-	padding: 5px;
-	position: absolute;
-	bottom: 0;
-	right: 10px;
-	left: 0;
-}
+	.pnd-panel-tab-content-footer {
+		right: 0px;
+		}
+	}	
