--- a/app/styles/preview.less
+++ b/app/styles/preview.less
@@ -4,5 +4,5 @@
 }
 
 .pnd-dashboard-preview-clear-sticky-button {
-  float: right;
+  //float: right;
 }
