--- a/app/styles/theme.less
+++ b/app/styles/theme.less
@@ -32,7 +32,7 @@
 
 .btn-xs  .pnd-icon {
     font-size: 14px;
-    line-height: inherit;
+    // line-height: inherit; VERIFICA COME MAI AVEVI MESSO INHERIT
     }
     
 
